hphp/test/slow/typedef/typedef_self.php.expectf
Fatal error: Cannot access self when no class scope is active in %s on line 2
